<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Trolley</string>
    <string name="register_now">Register Now</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    
    <string name="menu">Menu</string>
    <string name="start_order">START YOUR ORDER</string>
    <string name="hungry">HUNGRY?</string>
    <string name="enter_address">Enter your address</string>
    <string name="order_now">ORDER NOW</string>
    <string name="popular">Popular</string>
    <string name="newest">Newest</string>
    <string name="distance">Distance</string>
    <string name="minimum">Minimum</string>
    <string name="free_dis">Free Delivery</string>
    <string name="full_menu">Full Menu</string>
    <string name="coupon">Coupon</string>
    <string name="most_pop">Most Popular</string>
    <string name="about_text">Food is any substance[1] consumed to provide nutritional support for the body. It is usually of plant or animal origin, and contains essential nutrients, such as carbohydrates, fats, proteins, vitamins, or minerals. The substance is ingested by an organism and assimilated by the organism\'s cells in an effort to produce energy, maintain life, or stimulate growth.\n\nHistorically, people secured food through two methods: hunting and gathering, and agriculture. Today, most of the food energy consumed by the world population is supplied by the food industry.\n\nFood safety and food security are monitored by agencies like the International Association for Food Protection, World Resources Institute, World Food Programme, Food and Agriculture Organization, and International Food Information Council. They address issues such as sustainability, biological diversity, climate change, nutritional economics, population growth, water supply, and access to food.\n\nThe right to food is a human right derived from the International Covenant on Economic, Social and Cultural Rights (ICESCR), recognizing the "right to an adequate standard of living, including adequate food," as well as the "fundamental right to be free from hunger."</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="checkout">Checkout</string>
    <string name="enter_name">Your Name Please</string>
    <string name="enter_phone">Need a Number</string>
    <string name="enter_email_address">Email is necessary</string>
    <string name="enter_locality">Enter locality</string>
    <string name="apartment">Enter Apartment</string>
    <string name="enter_flat">Flat No Please</string>
    <string name="enter_apartment">Enter Apartment</string>
    <string name="register">Register</string>
    <string name="enter_password">Password ?</string>

    <string name="already_a_member"><u>Already a member, log in</u></string>
    <string name="signin_signin">Sign In !!</string>
    <string name="signin_email_to_login">Email Address For Login</string>
    <string name="signin_password_to_login">Password</string>
    <string name="signin_signit">Sign In</string>
    <string name="action_logout">LogOut</string>
    <string name="action_about">About</string>
    <string name="not_a_memeber"><u>Not a Member, Please Sign Up</u></string>
    <string name="home_cancel_order">Cancel Order</string>
    <string name="yes">Yes</string>
    <string name="order_confirmed_text">Your Request is confirmed. Please Contact 7208159273 for further details</string>
    <string name="update_details">Update Details</string>

</resources>