<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <EditText
        android:id="@+id/edit_user_name"
        style="@style/txt_white"
        android:layout_width="@dimen/signup_elements_width"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="4dp"
        android:hint="@string/enter_name" />

    <EditText
        android:id="@+id/edit_user_phone"
        android:inputType="phone"
        style="@style/txt_white"
        android:layout_width="@dimen/signup_elements_width"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="4dp"
        android:hint="@string/enter_phone" />

    <EditText
        android:id="@+id/edit_user_locality"
        style="@style/txt_white"
        android:layout_width="@dimen/signup_elements_width"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="16dp"
        android:hint="@string/enter_locality">

    </EditText>

    <EditText
        android:id="@+id/edit_user_apartment"
        style="@style/txt_white"
        android:layout_width="@dimen/signup_elements_width"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="16dp"
        android:hint="@string/enter_apartment">

    </EditText>

    <EditText
        android:id="@+id/edit_user_flat"
        style="@style/txt_white"
        android:layout_width="@dimen/signup_elements_width"
        android:layout_height="wrap_content"
        android:hint="@string/enter_flat"
        android:layout_marginTop="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="16dp"

        />

    <Button
        android:id="@+id/edit_user_update"
        android:text="@string/update_details"
        android:layout_width="@dimen/signup_elements_width"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="16dp">

    </Button>
</LinearLayout>