<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:scaleType="center"
        android:background="#FFFFBB33"
        android:contentDescription="@string/app_name" />

    <EditText
        android:id="@+id/edit_user_name"
        android:style="@style/txt_white"
        android:text=""
        android:layout_width="@dimen/signup_elements_width"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="4dp"
        android:hint="@string/enter_name" />

    <EditText
        android:id="@+id/edit_user_locality"
        style="@style/txt_white"
        android:layout_width="@dimen/signup_elements_width"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="16dp"
        android:hint="@string/enter_locality">

    </EditText>

    <EditText
        android:id="@+id/edit_user_apartment"
        style="@style/txt_white"
        android:layout_width="@dimen/signup_elements_width"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="16dp"
        android:hint="@string/enter_apartment">

    </EditText>

    <EditText
        android:id="@+id/edit_user_flat"
        style="@style/txt_white"
        android:layout_width="@dimen/signup_elements_width"
        android:layout_height="wrap_content"
        android:hint="@string/enter_flat"
        android:layout_marginTop="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="16dp"

        >


    </EditText>
</LinearLayout>