<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/red"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signin_signin"
        android:textColor="@color/white"
        android:textSize="@dimen/txt_18sp" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/pad_15dp"
        android:layout_marginTop="@dimen/pad_15dp"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:paddingLeft="@dimen/pad_15dp"
        android:paddingRight="@dimen/pad_15dp">

        <EditText
            android:id="@+id/signin_email"
            style="@style/txt_white"

            android:layout_width="@dimen/signin_elements_width"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/pad_20dp"
            android:hint="@string/signin_email_to_login">

        </EditText>

        <EditText
            android:id="@+id/signin_password"
            android:inputType="textPassword"
            style="@style/txt_white"
            android:layout_width="@dimen/signin_elements_width"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/pad_15dp"
            android:hint="@string/signin_password_to_login">

        </EditText>

    </LinearLayout>

    <Button
        android:id="@+id/signin_signit"
        style="@style/btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_red"
        android:text="@string/signin_signit"
        android:layout_marginBottom="@dimen/pad_10dp"
        android:textColor="@color/white"
        android:textSize="@dimen/txt_18sp" />
</LinearLayout>
