<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_color_gray_lt"
    android:gravity="center_horizontal"
    android:orientation="vertical" >

    <HorizontalScrollView
        android:id="@+id/vTabs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/main_color_gray_dk"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/tab1"
                style="@style/tab_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:text="@string/popular" />

            <View
                android:id="@+id/view1"
                style="@style/tab_divider"
                android:layout_width="@dimen/pad_1dp"
                android:layout_height="match_parent" />

            <Button
                android:id="@+id/tab2"
                style="@style/tab_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/newest" />

            <View
                android:id="@+id/view1"
                style="@style/tab_divider"
                android:layout_width="@dimen/pad_1dp"
                android:layout_height="match_parent" />

            <Button
                android:id="@+id/tab3"
                style="@style/tab_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/distance" />

            <View
                android:id="@+id/view1"
                style="@style/tab_divider"
                android:layout_width="@dimen/pad_1dp"
                android:layout_height="match_parent" />

            <Button
                android:id="@+id/tab4"
                style="@style/tab_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/minimum" />

            <View
                android:id="@+id/view1"
                style="@style/tab_divider"
                android:layout_width="@dimen/pad_1dp"
                android:layout_height="match_parent" />

            <Button
                android:id="@+id/tab5"
                style="@style/tab_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/free_dis" />
        </LinearLayout>
    </HorizontalScrollView>

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/ic_loc_red"
        android:drawablePadding="@dimen/pad_5dp"
        android:padding="@dimen/pad_10dp"
        android:text="213 Union Street 2232"
        android:textColor="@color/main_color_gray_dk"
        android:textSize="@dimen/txt_14sp" />

    <android.support.v4.view.ViewPager
            android:id="@+id/pager"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

</LinearLayout>